# appcoins-wallet-android

./: .gitignore  README.md  appcoins-services.json  build.gradle  build.gradle.kts  crowdin.yml  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
ContractProxy/: build.gradle
Waiyan10/: appcoins-wallet-android
airdrop/: build.gradle
app/: build.gradle  build.gradle.kts  fabric.properties  google-services.json  proguard-rules.pro
app/debug/: output.json
app/libs/: ethereumj.aar  pageindicatorview-1.0.3.aar
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/staging/: output-metadata.json  output.json
appcoinsRewards/: build.gradle
bdsbilling/: build.gradle
billing/: build.gradle
codestyle/: AptoideSquareAndroid_v4.xml
commons/: build.gradle
convention/: build.gradle.kts  settings.gradle.kts
core/: .gitignore
core/analytics/: build.gradle.kts
core/arch/: build.gradle.kts
core/legacy-base/: build.gradle.kts
core/network-base/: .gitignore  build.gradle.kts
core/shared-preferences/: build.gradle.kts
core/walletServices/: build.gradle.kts
docs/: pull-request-template.md
ethereumj-android/: build.gradle
feature-rewards/: build.gradle.kts
feature/paypal-verification/: build.gradle.kts
feature/vk-pay/: build.gradle.kts  proguard-rules.pro
gamification/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle.kts
permissions/: build.gradle
plugins/: build.gradle.kts  settings.gradle.kts
skills/: build.gradle
skillz/: build.gradle
(+7458 files in other folders)
